# CryptoMesh

./: .dockerignore  .env.mictlanx.dev  .gitignore  Dockerfile  README.md  build.sh  check_container.sh  deploy.sh  deploy_router.sh  docker-compose.yml  mictlanx-router.yml  publish.sh  pyproject.toml  rebuild.sh  run_local.sh  run_rabbitmq.sh  wait_cryptomesh.sh
.github/workflows/: docker_publish.yml  run_test.yml
analysis/: benchmark.ipynb
benchmark/: config.py  run_benchmark.py  utils.py
benchmark/entities/: endpoint_state.py  endpoints.py  function_result.py  function_state.py  functions.py  microservices.py  roles.py  security_policy.py  services.py
cryptomesh/: config.py  errors.py  server.py
cryptomesh/controllers/: __init__.py  activeobjects_controller.py  cryptomesh_controller.py  endpoint_state_controller.py  endpoints_controller.py  function_result_controller.py  function_state_controller.py  functions.py  functions_controller.py  services.py  (+6 more)
policies/: example.yml  example_1.yml  policy.yml
tests/: test_api_active_objects.py  test_api_endpoint.py  test_api_endpoint_state.py  test_api_endpoints.py  test_api_function_result.py  test_api_function_state.py  test_api_functions.py  test_api_microservice.py  test_api_role.py  test_api_security_policy.py  test_api_service.py  test_client.py  test_endpoints.py  test_function_result.py  test_function_state.py  test_functions.py  test_hierarchy.py  test_microservices.py  test_mongo_crud.py  test_policy_manager.py  test_resources.py  test_roles.py  test_schema_dto.py  test_security_policy.py  test_service.py
(+62 files in other folders)
