[project]
name = "cryptomesh"
version = "0.0.1"
description = ""
authors = [
    {name = "Ignacio Castillo",email = "ignacio.bcastillo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "rory (==0.0.182)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

